# CyberGif

./: .gitignore  CMakeLists.txt  CommandsApplier.cpp  CommandsApplier.h  CommandsWidget.cpp  CommandsWidget.h  FileManagement.cpp  FileManagement.h  GifScene.cpp  GifScene.h  GifWidget.cpp  GifWidget.h  MainWidget.cpp  MainWidget.h  README.md  main.cpp  resources.qrc
Commands/: CommandsWidget.cpp  CommandsWidget.h  ResizeCommandWidget.cpp  ResizeCommandWidget.h
Commands/Crop/: CropCommandWidget.cpp  CropCommandWidget.hpp  CropCommandWidget.ui
Commands/Optimize/: OptimizeCommandWidget.cpp  OptimizeCommandWidget.hpp  OptimizeCommandWidget.ui
Commands/Resize/: ResizeCommandWidget.cpp  ResizeCommandWidget.h  ResizeCommandWidget.hpp  ResizeCommandWidget.ui
Commands/Rotate/: RotateCommandWidget.cpp  RotateCommandWidget.hpp  RotateCommandWidget.ui
Commands/Speed/: SpeedCommandWidget.cpp  SpeedCommandWidget.hpp  SpeedCommandWidget.ui
